Fix timestamp position in topic container
It overlaps with other elements when you do things like:
Open edit title form, preview title

--- a/modules/discussion/styles/topic.less
+++ b/modules/discussion/styles/topic.less
@@ -27,6 +27,7 @@
 	// Full topic view, show all summary
 	.flow-topic-summary {
 		line-height: 18px;
+		padding-bottom: 10px;
 		>p {
 			font-size: 14px;
 			font-weight: normal;
@@ -231,7 +232,7 @@
 
 			position: absolute;
 			right: 22px;
-			top: 40px;
+			bottom: 0px;
 
 			a {
 				color: inherit;
